Fixed vertical aligning of parallax content

--- a/frontend/app/src/pages/Connected/style.scss
+++ b/frontend/app/src/pages/Connected/style.scss
@@ -254,7 +254,6 @@
       position: relative;
       z-index: 3;
       margin: 10%;
-      margin-top: 5%;
 
       border-radius: 1em;
 
@@ -267,7 +266,7 @@
         padding: 3em;
         width: 28em;
         margin: auto;
-        margin-top: 20vh;
+        margin-top: 5%;
       }
 
       @include bp-full {
